# Learn-Advanced-Cpp

./: README.md
C++ Features/C++ 11 Features/: Auto Pointers.cpp  Bind.cpp  C++98 Initialization.cpp  Capturing this in Lambda.cpp  DecItype and Typeid.cpp  Delegating Constructors.cpp  Dynamic Casts.cpp  Elision and Optimization.cpp  Enhanced for loop.cpp  Functional Types.cpp  Initialization.cpp  Initializer Lists.cpp  Introducing Lambda Expressions.cpp  LValue References.cpp  Lambda Capture Expressions.cpp  Move Assignment Operators.cpp  Move Constructors.cpp  Mutable Lambdas.cpp  Nested Template Classes.cpp  Object Initialization.cpp  Perfect Forwarding.cpp  Reinterpret Cast.cpp  Rvalue References.cpp  Shared Pointers.cpp  Static Cast.cpp  The auto Keyword.cpp
C++ Features/Exceptions/: Basic Exceptions.cpp  Catching Subclass Exceptions.cpp  Custom Exceptions.cpp  Standard Exceptions.cpp
C++ Features/Files/: Binary Files.cpp  Parsing Text in Files.cpp  Reading Text Files.cpp  Writing Text Files.cpp
C++ Features/Operator Overloading/: A Complex Number Class.cpp  Overloading the Assignment Operator.cpp  Overloading the Insertion Operator for Printing.cpp
C++ Features/Passing Functions to Functions/: Abstract classes.cpp  Function Pointers.cpp  Functors.cpp  Object Slicing and Polymorphism.cpp  Using Function Pointers - An Example.cpp
Fractal/: CMakeLists.txt
Fractal/src/: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  FractalCreator.cpp  FractalCreator.h  Mandelbrot.cpp  Mandelbrot.h  RGB.cpp  RGB.h  Zoom.h  ZoomList.cpp  ZoomList.h  main.cpp
(+15 files in other folders)
